# black-jack-resolver

./: LICENSE  README.md  jack.py  pyproject.toml
blackjack/: compute_arrays.py  constants.py  dag.py  display.py  ev.py  ev_montecarlo.py  graph.py  helper.py  markov.py  settings.py  transitions.py  values.py
blackjack/tests/: conftest.py  generator.py  random.py  test_ev.py  test_generator.py  test_graph.py  test_random.py  test_simulator.py
tables/dealer_peeked_stand_on_soft/: best_moves.md  ev_tables.md
tables/no_dealer_peeked_stand_on_soft/: best_moves.md  ev_tables.md
