[tool.poetry]
name = "blackjack"
version = "0.1.0"
description = ""
authors = ["Julien Dubost <j.dubost@b-sharpe.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.25.1"
pandas = "^2.0.3"
ipython = "^8.14.0"
black = "^23.7.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
