[tool.poetry]
name = "blackjack"
version = "0.1.0"
description = ""
authors = ["Julien Bou <allankicker@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
ipython = "^8.14.0"
black = "^23.7.0"
pytest = "^8.3.2"
pytest-xdist = "^3.6.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
